--- a/GranadaShopClase.API.Identity/GranadaShopClase.API.Identity.csproj
+++ b/GranadaShopClase.API.Identity/GranadaShopClase.API.Identity.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUi" />
+	<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
   </ItemGroup>
 
 </Project>
