--- a/GranadaShopClase.Aspire/GranadaShopClase.Aspire.csproj
+++ b/GranadaShopClase.Aspire/GranadaShopClase.Aspire.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.AppHost" />
     <PackageReference Include="Aspire.Hosting.PostgreSQL" />
+    <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" />
   </ItemGroup>
 
   <ItemGroup>
